--- a/Slides/01-Introduction.html
+++ b/Slides/01-Introduction.html
@@ -99,12 +99,21 @@ name: toc
 .pull-right[
 ## &lt;bdi style="color:magenta;"&gt;3. Websites e contatos &lt;/bdi&gt;
 
-GitHub: https://github.com/DeivisonSouza
+&lt;html&gt;
+&lt;head&gt;
+&lt;link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"&gt;
+&lt;/head&gt;
+&lt;body&gt;
+&lt;i class="fa fa-github fa-2x"&gt;&lt;/i&gt;
+&lt;!--use the fa-lg (33% increase), fa-2x, fa-3x, fa-4x, or fa-5x classes--&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+&lt;bdi style="font-weight:bold"&gt;GitHub:&lt;/bdi&gt; https://github.com/DeivisonSouza
 
-.center[&lt;img src="https://marketplace-cdn.atlassian.com/files/images/cec44feb-0b1b-4fe3-936d-67a51a1fe28e.png" width="20%"&gt;]
+&lt;span class="iconify" data-icon="fa-brands:orcid" data-inline="false"&gt;&lt;/span&gt;
 
 
-ORCID: https://orcid.org/0000-0002-2975-0927
+&lt;div itemscope itemtype="https://schema.org/Person"&gt;&lt;a itemprop="sameAs" content="https://orcid.org/0000-0002-2975-0927" href="https://orcid.org/0000-0002-2975-0927" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"&gt;&lt;img src="https://orcid.org/sites/default/files/images/orcid_128x128.png" style="width:1.5em;margin-right:1em;" alt="ORCID iD icon"&gt;https://orcid.org/0000-0002-2975-0927&lt;/a&gt;&lt;/div&gt;
 
 &lt;img src="fig/ORCID.png" width="20%" style="display: block; margin: auto;" /&gt;
 
