--- a/Slides/01-Introduction.html
+++ b/Slides/01-Introduction.html
@@ -34,7 +34,7 @@ class: center, middle, inverse, title-slide
 ## (uma introdução para iniciantes)
 ### Deivison Venicio Souza
 ### Universidade Federal do Pará (UFPA)
-### <p>10/setembro/2020 | Altamira, Pará</p>
+### <p>12/setembro/2020 | Altamira, Pará</p>
 
 ---
 
@@ -749,11 +749,17 @@ Agora, você deseja descobrir se essa lista contém *Bertholletia excelsa* e *Sw
 ---
 name: log
 # Operadores lógicos
-&lt;br&gt; &lt;br&gt;
-São usados para realizar operações lógicas, cuja saída é uma resposta booleana. Ou seja, Verdadeiro (`TRUE`) ou Falso (`FALSE`).
 
-<div id="htmlwidget-bdca59d75070de93206c" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-bdca59d75070de93206c">{"x":{"filter":"none","editable":{"target":"cell","disable":{"columns":null}},"data":[["1","2","3","4","5","6","7","8","9","10"],["Acapu","Araucaria","Mogno","Cedro","Ipe","Cedro","Ipe","Araucaria","Angelim","Angelim"],[23.2,27.1,33.6,42.6,52.1,60.4,70.5,80.3,90.8,100.5],[8.4,8.7,9.1,13.2,15.4,16.8,17.9,18.6,19.5,22.4],["Não","Não","Não","Não","Sim","Não","Não","Não","Sim","Sim"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>especie<\/th>\n      <th>DAP<\/th>\n      <th>H<\/th>\n      <th>cortar<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":5,"dom":"tip","columnDefs":[{"className":"dt-right","targets":[2,3]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[5,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
+.left-column[
+
+São usados para realizar operações lógicas, cuja saída é uma resposta booleana. Ou seja, Verdadeiro (`TRUE`) ou Falso (`FALSE`).
+]
+
+.right-column[
+<div id="htmlwidget-27ceecf8d9236bd72533" style="width:400px;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-27ceecf8d9236bd72533">{"x":{"filter":"none","caption":"<caption>Medidas fictícias para 10 árvores de espécies florestais.<\/caption>","editable":{"target":"cell","disable":{"columns":null}},"data":[["Acapu","Araucaria","Mogno","Cedro","Ipe","Cedro","Ipe","Araucaria","Angelim","Angelim"],[23.2,27.1,33.6,42.6,52.1,60.4,70.5,80.3,90.8,100.5],[8.4,8.7,9.1,13.2,15.4,16.8,17.9,18.6,19.5,22.4],["Não","Não","Não","Não","Sim","Não","Não","Não","Sim","Sim"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Especie<\/th>\n      <th>DAP<\/th>\n      <th>H<\/th>\n      <th>cortar<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":10,"dom":"tip","autoWidth":true,"initComplete":"function(settings, json) {\n$(this.api().table().container()).css({'font-size': '12pt'});\n}","columnDefs":[{"className":"dt-right","targets":[1,2]}],"order":[],"orderClasses":false}},"evals":["options.initComplete"],"jsHooks":[]}</script>
+
+]
 
 ---
 
