--- a/Slides/01-Introduction.html
+++ b/Slides/01-Introduction.html
@@ -482,78 +482,90 @@ class: center, inverse, middle
 
 &lt;style type="text/css"&gt;
 .tg  {border-collapse:collapse;border-color:#ccc;border-spacing:0;}
-.tg td{background-color:#fff;border-color:#ccc;border-style:solid;border-width:1px;color:#333;
-  font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg th{background-color:#f0f0f0;border-color:#ccc;border-style:solid;border-width:1px;color:#333;
-  font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg .tg-bn4o{font-size:18px;font-weight:bold;text-align:center;vertical-align:top}
-.tg .tg-tsiw{background-color:#f9f9f9;font-size:18px;text-align:center;vertical-align:top}
-.tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
+.tg td{background-color:#fff;border-bottom-width:1px;border-color:#ccc;border-style:solid;border-top-width:1px;
+  border-width:0px;color:#333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;
+  word-break:normal;}
+.tg th{background-color:#f0f0f0;border-bottom-width:1px;border-color:#ccc;border-style:solid;border-top-width:1px;
+  border-width:0px;color:#333;font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;
+  padding:10px 5px;word-break:normal;}
+.tg .tg-c3ow{border-color:inherit;text-align:center;vertical-align:top}
+.tg .tg-mqa1{border-color:#000000;font-weight:bold;text-align:center;vertical-align:top}
+.tg .tg-7btt{border-color:inherit;font-weight:bold;text-align:center;vertical-align:top}
+.tg .tg-zwlc{background-color:#f9f9f9;border-color:inherit;font-weight:bold;text-align:center;vertical-align:top}
+.tg .tg-abip{background-color:#f9f9f9;border-color:inherit;text-align:center;vertical-align:top}
 &lt;/style&gt;
 &lt;table class="tg"&gt;
 &lt;thead&gt;
   &lt;tr&gt;
-    &lt;th class="tg-bn4o" colspan="2"&gt;Aritméticos&lt;/th&gt;
-    &lt;th class="tg-bn4o" colspan="2"&gt;Lógicos&lt;/th&gt;
-    &lt;th class="tg-bn4o" colspan="2"&gt;Relacionais&lt;/th&gt;
+    &lt;th class="tg-mqa1" colspan="2"&gt;Aritméticos&lt;/th&gt;
+    &lt;th class="tg-7btt" colspan="2"&gt;Lógicos&lt;/th&gt;
+    &lt;th class="tg-7btt" colspan="2"&gt;Relacionais&lt;/th&gt;
   &lt;/tr&gt;
 &lt;/thead&gt;
 &lt;tbody&gt;
   &lt;tr&gt;
-    &lt;td class="tg-tsiw"&gt;+&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;Adição&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;&amp;amp;&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;E (and)/para vetores&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;&amp;lt;&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;Menor do que...&lt;/td&gt;
+    &lt;td class="tg-zwlc"&gt;Símbolo&lt;/td&gt;
+    &lt;td class="tg-zwlc"&gt;Descrição&lt;/td&gt;
+    &lt;td class="tg-zwlc"&gt;Símbolo&lt;/td&gt;
+    &lt;td class="tg-zwlc"&gt;Descrição&lt;/td&gt;
+    &lt;td class="tg-zwlc"&gt;Símbolo&lt;/td&gt;
+    &lt;td class="tg-zwlc"&gt;Descrição&lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
-    &lt;td class="tg-13pz"&gt;-&lt;/td&gt;
-    &lt;td class="tg-13pz"&gt;Subtração&lt;/td&gt;
-    &lt;td class="tg-13pz"&gt;&amp;amp;&amp;amp;&lt;/td&gt;
-    &lt;td class="tg-13pz"&gt;E (and) &lt;/td&gt;
-    &lt;td class="tg-13pz"&gt;&amp;gt;&lt;/td&gt;
-    &lt;td class="tg-13pz"&gt;Maior do que...&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;+&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;Adição&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;&amp;amp;&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;E (and) - versão vetorizada&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;&amp;lt;&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;Menor do que...&lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
-    &lt;td class="tg-tsiw"&gt;*&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;Multiplicação&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;⎮&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;Ou (or)/para vetores&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;&amp;lt;=&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;Menor ou igual do que...&lt;/td&gt;
+    &lt;td class="tg-abip"&gt;-&lt;/td&gt;
+    &lt;td class="tg-abip"&gt;Subtração&lt;/td&gt;
+    &lt;td class="tg-abip"&gt;&amp;amp;&amp;amp;&lt;/td&gt;
+    &lt;td class="tg-abip"&gt;E (and) - versão não-vetorizada&lt;/td&gt;
+    &lt;td class="tg-abip"&gt;&amp;gt;&lt;/td&gt;
+    &lt;td class="tg-abip"&gt;Maior do que...&lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
-    &lt;td class="tg-13pz"&gt;/&lt;/td&gt;
-    &lt;td class="tg-13pz"&gt;Divisão&lt;/td&gt;
-    &lt;td class="tg-13pz"&gt;⎮⎮&lt;/td&gt;
-    &lt;td class="tg-13pz"&gt;Ou (or)&lt;/td&gt;
-    &lt;td class="tg-13pz"&gt;&amp;gt;=&lt;/td&gt;
-    &lt;td class="tg-13pz"&gt;Maior ou igual do que...&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;*&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;Multiplicação&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;⎮&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;Ou (or) - versão vetorizada&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;&amp;lt;=&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;Menor ou igual do que...&lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
-    &lt;td class="tg-tsiw"&gt;^ ou **&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;Potenciação&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;!&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;Não...&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;==&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;Igual a...&lt;/td&gt;
+    &lt;td class="tg-abip"&gt;/&lt;/td&gt;
+    &lt;td class="tg-abip"&gt;Divisão&lt;/td&gt;
+    &lt;td class="tg-abip"&gt;⎮⎮&lt;/td&gt;
+    &lt;td class="tg-abip"&gt;Ou (or) - &lt;span style="font-weight:400;font-style:normal"&gt;versão não-vetorizada&lt;/span&gt;&lt;/td&gt;
+    &lt;td class="tg-abip"&gt;&amp;gt;=&lt;/td&gt;
+    &lt;td class="tg-abip"&gt;Maior ou igual do que...&lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
-    &lt;td class="tg-13pz"&gt;%%&lt;/td&gt;
-    &lt;td class="tg-13pz"&gt;Resto da divisão&lt;/td&gt;
-    &lt;td class="tg-13pz"&gt;xor&lt;/td&gt;
-    &lt;td class="tg-13pz"&gt;&lt;span style="font-weight:400;font-style:normal"&gt;Ou exclusivo...&lt;/span&gt;&lt;/td&gt;
-    &lt;td class="tg-13pz"&gt;!=&lt;/td&gt;
-    &lt;td class="tg-13pz"&gt;Diferente de...&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;^ ou **&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;Potenciação&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;!&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;Não...&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;==&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;Igual a...&lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
-    &lt;td class="tg-tsiw"&gt;%/%&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;Parte inteira da divisão&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;&lt;span style="font-weight:400;font-style:normal"&gt;%in%&lt;/span&gt;&lt;/td&gt;
-    &lt;td class="tg-tsiw"&gt;&lt;span style="font-weight:400;font-style:normal"&gt;Contém&lt;/span&gt;&lt;/td&gt;
+    &lt;td class="tg-abip"&gt;%%&lt;/td&gt;
+    &lt;td class="tg-abip"&gt;Resto da divisão&lt;/td&gt;
+    &lt;td class="tg-abip"&gt;xor&lt;/td&gt;
+    &lt;td class="tg-abip"&gt;&lt;span style="font-weight:400;font-style:normal"&gt;Ou exclusivo...&lt;/span&gt;&lt;/td&gt;
+    &lt;td class="tg-abip"&gt;!=&lt;/td&gt;
+    &lt;td class="tg-abip"&gt;Diferente de...&lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+    &lt;td class="tg-c3ow"&gt;%/%&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;Parte inteira da divisão&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;&lt;span style="font-weight:400;font-style:normal"&gt;%in%&lt;/span&gt;&lt;/td&gt;
+    &lt;td class="tg-c3ow"&gt;&lt;span style="font-weight:400;font-style:normal"&gt;Contém&lt;/span&gt;&lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
@@ -728,7 +740,7 @@ Imagine que você tenha uma lista de espécies ocorrentes em uma Área de Manejo
 ```
 ]
 
-Agora, você deseja descobrir se essa lista contém *Bertholletia excelsa* e *Swietenia macrophylla*, espécies proibidas para exploração.
+Agora, você deseja descobrir se essa lista contém *Bertholletia excelsa* e *Swietenia macrophylla*. Essas espécies estão classificadas na categoria Vulnerável (VU), conforme a [Portaria MMA 443, de 17 de dezembro de 2014](http://dados.gov.br/dataset/portaria_443). Portanto, sofrem as restrições estabelecidas no art. 2º, incluindo a proibição de manejo.
 
 .pull-left[
 
@@ -747,22 +759,114 @@ Agora, você deseja descobrir se essa lista contém *Bertholletia excelsa* e *Sw
 ]
 
 ---
+# Operadores relacionais (ou comparação)
+
+## Um pouco mais sobre o operador `%in%`
+
+.pull-top[
+
+```r
+(especie &lt;- c("Vouacapoua-americana", "Cedrela-odorata", "Bertholletia-excelsa", "Dinizia-excelsa Ducke", "Bertholletia-excelsa", "Manilkara-huberi", "Couratari-guianensis"))
+
+(ameacadas &lt;- c("Vouacapoua-americana", "Bertholletia-excelsa", "Cedrela-odorata",
+                "Swietenia-macrophylla"))
+```
+]
+
+.pull-bottom[
+
+```
+## [1] "Vouacapoua-americana"  "Cedrela-odorata"       "Bertholletia-excelsa" 
+## [4] "Dinizia-excelsa Ducke" "Bertholletia-excelsa"  "Manilkara-huberi"     
+## [7] "Couratari-guianensis"
+## [1] "Vouacapoua-americana"  "Bertholletia-excelsa"  "Cedrela-odorata"      
+## [4] "Swietenia-macrophylla"
+```
+]
+
+.pull-top[
+
+```r
+especie %in% ameacadas
+#unique(especie[which(especie %in% ameacadas)])
+```
+]
+
+.pull-bottom[
+
+```
+## [1]  TRUE  TRUE  TRUE FALSE  TRUE FALSE FALSE
+```
+]
+
+---
 name: log
 # Operadores lógicos
 
 .left-column[
+Em programação, estes operadores são usados para realizar `operações lógicas`, cuja saída é uma `resposta booleana`. Ou seja, uma resposta (ou dado) booleana indica se algo é Verdadeiro (`TRUE`) ou Falso (`FALSE`).
 
-São usados para realizar operações lógicas, cuja saída é uma resposta booleana. Ou seja, Verdadeiro (`TRUE`) ou Falso (`FALSE`).
+&lt;bdi style="font-weight:bold"&gt;Mogno&lt;/bdi&gt; = &lt;bdi style="color:green;"&gt;*Swietenia macrophylla*&lt;/bdi&gt;; e
+
+&lt;bdi style="font-weight:bold"&gt;Angelim&lt;/bdi&gt; = &lt;bdi style="color:green;"&gt;*Hymenolobium petraeum*&lt;/bdi&gt;.
 ]
 
 .right-column[
-<div id="htmlwidget-2dcb375c7074fef2e5f8" style="width:400px;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-2dcb375c7074fef2e5f8">{"x":{"filter":"none","caption":"<caption>Medidas fictícias para 10 árvores de espécies florestais.<\/caption>","editable":{"target":"cell","disable":{"columns":null}},"data":[["Acapu","Araucaria","Mogno","Cedro","Ipe","Cedro","Ipe","Araucaria","Angelim","Angelim"],[23.2,27.1,33.6,42.6,52.1,60.4,70.5,80.3,90.8,100.5],[8.4,8.7,9.1,13.2,15.4,16.8,17.9,18.6,19.5,22.4],["Não","Não","Não","Não","Sim","Não","Não","Não","Sim","Sim"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Especie<\/th>\n      <th>DAP<\/th>\n      <th>H<\/th>\n      <th>cortar<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":10,"dom":"tip","autoWidth":true,"initComplete":"function(settings, json) {\n$(this.api().table().container()).css({'font-size': '12pt'});\n}","columnDefs":[{"className":"dt-right","targets":[1,2]}],"order":[],"orderClasses":false}},"evals":["options.initComplete"],"jsHooks":[]}</script>
+<div id="htmlwidget-db5d2082f65045c64746" style="width:400px;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-db5d2082f65045c64746">{"x":{"filter":"none","caption":"<caption>Dados fictícios para 10 árvores de duas espécies florestais.<\/caption>","editable":{"target":"cell","disable":{"columns":null}},"data":[["Mogno","Mogno","Mogno","Angelim","Angelim","Angelim","Angelim","Angelim","Mogno","Mogno"],[33.6,42.6,52.1,80.3,90.8,60.4,70.5,100.5,60.7,27.1],[9.1,13.2,15.4,18.6,19.5,16.8,17.9,22.4,15.3,8.7],["Sim","Não","Sim","Não","Sim","Não","Sim","Não","Sim","Sim"],[2,1,3,1,2,1,2,1,1,3]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Especie<\/th>\n      <th>DAP<\/th>\n      <th>H<\/th>\n      <th>Cipo<\/th>\n      <th>QF<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":10,"dom":"tip","autoWidth":true,"initComplete":"function(settings, json) {\n$(this.api().table().container()).css({'font-size': '12pt'});\n}","columnDefs":[{"className":"dt-right","targets":[1,2,4]}],"order":[],"orderClasses":false}},"evals":["options.initComplete"],"jsHooks":[]}</script>
 
 ]
 
 ---
+# Operadores lógicos
 
+## Operador `&amp;` - versão vetorizada
+
+Use o operador lógico `&amp;` para encontrar responder as questões a seguir:
+
++ Quais árvores possuem &lt;bdi style="font-weight:bold"&gt;DAP maior do que 50cm&lt;/bdi&gt; `e` &lt;bdi style="font-weight:bold"&gt;qualidade de fuste (QF) igual a 1&lt;/bdi&gt;?
+
+
+```r
+dt$DAP &gt;= 50 &amp; dt$QF == 1
+```
+
+
+```
+##  [1] FALSE FALSE FALSE  TRUE FALSE  TRUE FALSE  TRUE  TRUE FALSE
+```
+
++ Quais árvores não possuem &lt;bdi style="font-weight:bold"&gt;cipós presentes&lt;/bdi&gt;, &lt;bdi style="font-weight:bold"&gt;qualidade de fuste (QF) igual a 1&lt;/bdi&gt; `e` &lt;bdi style="font-weight:bold"&gt;DAP maior do que 50cm&lt;/bdi&gt;?
+
+
+```r
+dt$Cipo == "Não" &amp; dt$QF == 1 &amp; dt$DAP &gt;= 50
+```
+
+
+```
+##  [1] FALSE FALSE FALSE  TRUE FALSE  TRUE FALSE  TRUE FALSE FALSE
+```
+
+
+---
++ Quais árvores possuem &lt;bdi style="font-weight:bold"&gt;DAP maior do que 50cm&lt;/bdi&gt; `e` &lt;bdi style="font-weight:bold"&gt;podem ser exploradas&lt;/bdi&gt; (cortadas)?
+
++ Baseado no Diâmetro Mínimo de Corte (DMC) estabelecido no art. 6º da [Resolução CONAMA nº 406 de 02/02/2009](http://www2.mma.gov.br/port/conama/legiabre.cfm?codlegi=597) (Publicado no DOU nº 26, de 06/02/2009, pág. 100) quais árvores são passíveis de corte (exploração) legal (considerando a inexistência de outros impedimentos!)?
+
+
+
+```r
+DAP &gt;= 50 &amp; Cortar == "Sim"
+```
+
+
+```
+##  [1] FALSE FALSE FALSE  TRUE FALSE  TRUE FALSE  TRUE  TRUE FALSE
+```
+
+
+---
 # Operadores lógicos
 ## Função `xor()` – OU (OR) exclusivo
 
