--- a/Slides/01-Introduction.html
+++ b/Slides/01-Introduction.html
@@ -806,14 +806,14 @@ name: log
 .left-column[
 Em programação, estes operadores são usados para realizar `operações lógicas`, cuja saída é uma `resposta booleana`. Ou seja, uma resposta (ou dado) booleana indica se algo é Verdadeiro (`TRUE`) ou Falso (`FALSE`).
 
-&lt;bdi style="font-weight:bold"&gt;Mogno&lt;/bdi&gt; = &lt;bdi style="color:green;"&gt;*Swietenia macrophylla*&lt;/bdi&gt;; e
+&lt;bdi style="font-weight:bold"&gt;Mogno brasileiro&lt;/bdi&gt; = &lt;bdi style="color:green;"&gt;*Swietenia macrophylla*&lt;/bdi&gt;; e
 
-&lt;bdi style="font-weight:bold"&gt;Angelim&lt;/bdi&gt; = &lt;bdi style="color:green;"&gt;*Hymenolobium petraeum*&lt;/bdi&gt;.
+&lt;bdi style="font-weight:bold"&gt;Angelim pedra&lt;/bdi&gt; = &lt;bdi style="color:green;"&gt;*Hymenolobium petraeum*&lt;/bdi&gt;.
 ]
 
 .right-column[
-<div id="htmlwidget-682c408bfcfb54a14e82" style="width:400px;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-682c408bfcfb54a14e82">{"x":{"filter":"none","caption":"<caption>Dados fictícios para 10 árvores de duas espécies florestais.<\/caption>","editable":{"target":"cell","disable":{"columns":null}},"data":[["Mogno","Mogno","Mogno","Angelim","Angelim","Angelim","Angelim","Angelim","Mogno","Mogno"],[33.6,42.6,52.1,80.3,90.8,60.4,70.5,100.5,60.7,27.1],[9.1,13.2,15.4,18.6,19.5,16.8,17.9,22.4,15.3,8.7],["Sim","Não","Sim","Não","Sim","Não","Sim","Não","Sim","Sim"],[2,1,3,1,2,1,2,1,1,3]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Especie<\/th>\n      <th>DAP<\/th>\n      <th>H<\/th>\n      <th>Cipo<\/th>\n      <th>QF<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":10,"dom":"tip","autoWidth":true,"initComplete":"function(settings, json) {\n$(this.api().table().container()).css({'font-size': '12pt'});\n}","columnDefs":[{"className":"dt-right","targets":[1,2,4]}],"order":[],"orderClasses":false}},"evals":["options.initComplete"],"jsHooks":[]}</script>
+<div id="htmlwidget-fd4f8fae83d3cb8aded6" style="width:350px;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-fd4f8fae83d3cb8aded6">{"x":{"filter":"none","caption":"<caption>Dados fictícios para 10 árvores de duas espécies florestais.<\/caption>","editable":{"target":"cell","disable":{"columns":null}},"data":[["Swietenia macrophylla","Swietenia macrophylla","Swietenia macrophylla","Hymenolobium petraeum","Hymenolobium petraeum","Hymenolobium petraeum","Hymenolobium petraeum","Hymenolobium petraeum","Swietenia macrophylla","Swietenia macrophylla"],[33.6,42.6,52.1,80.3,90.8,49.4,70.5,100.5,60.7,27.1],[9.1,13.2,15.4,18.6,19.5,16.8,17.9,22.4,15.3,8.7],["Sim","Não","Sim","Não","Sim","Não","Sim","Não","Sim","Sim"],[2,1,3,1,2,1,2,3,1,3],["Protegida","Protegida","Protegida","Explorar","Explorar","Remanescente","Explorar","Remanescente","Protegida","Protegida"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Especie<\/th>\n      <th>DAP<\/th>\n      <th>H<\/th>\n      <th>Cipo<\/th>\n      <th>QF<\/th>\n      <th>Selecao<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":10,"dom":"tip","autoWidth":true,"initComplete":"function(settings, json) {\n$(this.api().table().container()).css({'font-size': '12pt'});\n}","columnDefs":[{"className":"dt-right","targets":[1,2,4]}],"order":[],"orderClasses":false}},"evals":["options.initComplete"],"jsHooks":[]}</script>
 
 ]
 
@@ -822,21 +822,37 @@ Em programação, estes operadores são usados para realizar `operações lógic
 
 ## Operador `&amp;` - versão vetorizada
 
-Use o operador lógico `&amp;` para encontrar responder as questões a seguir:
+Use o operador lógico `&amp;` para responder as questões a seguir:
 
-+ Quais árvores possuem &lt;bdi style="font-weight:bold"&gt;DAP maior do que 50cm&lt;/bdi&gt; `e` &lt;bdi style="font-weight:bold"&gt;qualidade de fuste (QF) igual a 1&lt;/bdi&gt;?
+✍ Quais árvores possuem &lt;bdi style="font-weight:bold"&gt;DAP maior ou igual a 50cm&lt;/bdi&gt; `e` &lt;bdi style="font-weight:bold"&gt;qualidade de fuste (QF) igual a 1&lt;/bdi&gt;❓
+
+--
 
 
 ```r
 dt$DAP &gt;= 50 &amp; dt$QF == 1
 ```
 
+--
+
 
 ```
-##  [1] FALSE FALSE FALSE  TRUE FALSE  TRUE FALSE  TRUE  TRUE FALSE
+##  [1] FALSE FALSE FALSE  TRUE FALSE FALSE FALSE FALSE  TRUE FALSE
 ```
 
-+ Quais árvores não possuem &lt;bdi style="font-weight:bold"&gt;cipós presentes&lt;/bdi&gt;, &lt;bdi style="font-weight:bold"&gt;qualidade de fuste (QF) igual a 1&lt;/bdi&gt; `e` &lt;bdi style="font-weight:bold"&gt;DAP maior do que 50cm&lt;/bdi&gt;?
+--
+.bg-washed-near-white.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt5[
+.center[&lt;bdi style="font-weight:bold"&gt;🌳 Legislação florestal!🌳&lt;/bdi&gt;]
+
+A [Resolução CONAMA nº 406 de 02/02/2009](http://www2.mma.gov.br/port/conama/legiabre.cfm?codlegi=597) (Publicada no DOU nº 26, de 06/02/2009, pág. 100) estabelece em seu art. 6º um &lt;bdi style="font-weight:bold"&gt;Diâmetro Mínimo de Corte (DMC) de 50 cm&lt;/bdi&gt; para todas as espécies, para as quais ainda não se estabeleceu o DMC específico.
+]
+
+---
+# Operadores lógicos
+
+## Operador `&amp;` - versão vetorizada (cont.)
+
++ Quais árvores possuem &lt;bdi style="font-weight:bold"&gt;cipós ausentes&lt;/bdi&gt;, &lt;bdi style="font-weight:bold"&gt;QF igual a 1&lt;/bdi&gt; `e` &lt;bdi style="font-weight:bold"&gt;DAP maior ou igual a 50cm&lt;/bdi&gt;?
 
 
 ```r
@@ -845,15 +861,22 @@ dt$Cipo == "Não" &amp; dt$QF == 1 &amp; dt$DAP &gt;= 50
 
 
 ```
-##  [1] FALSE FALSE FALSE  TRUE FALSE  TRUE FALSE  TRUE FALSE FALSE
+##  [1] FALSE FALSE FALSE  TRUE FALSE FALSE FALSE FALSE FALSE FALSE
+```
+
++ Quais árvores estão selecionadas para &lt;bdi style="font-weight:bold"&gt;explorar&lt;/bdi&gt; `e` possuem &lt;bdi style="font-weight:bold"&gt;QF igual a 1&lt;/bdi&gt;?
+
+
+```r
+dt$Selecao == "Explorar" &amp; dt$QF == 1
 ```
 
 
----
+```
+##  [1] FALSE FALSE FALSE  TRUE FALSE FALSE FALSE FALSE FALSE FALSE
+```
+
 + Quais árvores possuem &lt;bdi style="font-weight:bold"&gt;DAP maior do que 50cm&lt;/bdi&gt; `e` &lt;bdi style="font-weight:bold"&gt;podem ser exploradas&lt;/bdi&gt; (cortadas)?
-
-+ Baseado no Diâmetro Mínimo de Corte (DMC) estabelecido no art. 6º da [Resolução CONAMA nº 406 de 02/02/2009](http://www2.mma.gov.br/port/conama/legiabre.cfm?codlegi=597) (Publicado no DOU nº 26, de 06/02/2009, pág. 100) quais árvores são passíveis de corte (exploração) legal (considerando a inexistência de outros impedimentos!)?
-
 
 
 ```r
@@ -862,9 +885,8 @@ DAP &gt;= 50 &amp; Cortar == "Sim"
 
 
 ```
-##  [1] FALSE FALSE FALSE  TRUE FALSE  TRUE FALSE  TRUE  TRUE FALSE
+##  [1] FALSE FALSE FALSE  TRUE FALSE FALSE FALSE FALSE  TRUE FALSE
 ```
-
 
 ---
 # Operadores lógicos
