--- a/Slides/01-Introduction.html
+++ b/Slides/01-Introduction.html
@@ -62,7 +62,7 @@ name: toc
 
 # 👋 Olá, sejam bem vindos!
 
-## &lt;bdi style="color:magenta;"&gt;1. Sobre o instrutor&lt;/bdi&gt;
+## &lt;bdi style="color:magenta;"&gt;1. Sobre o facilitador&lt;/bdi&gt;
 
 .pull-left[
 * &lt;bdi style="font-weight:bold"&gt;Graduação (Titulação: ano 2008)&lt;/bdi&gt;
@@ -812,10 +812,48 @@ Em programação, estes operadores são usados para realizar `operações lógic
 ]
 
 .right-column[
-<div id="htmlwidget-52249ee90f9a3dbf208b" style="width:350px;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-52249ee90f9a3dbf208b">{"x":{"filter":"none","caption":"<caption>Dados fictícios para 10 árvores de duas espécies florestais.<\/caption>","editable":{"target":"cell","disable":{"columns":null}},"data":[["Swietenia macrophylla","Swietenia macrophylla","Swietenia macrophylla","Hymenolobium petraeum","Hymenolobium petraeum","Hymenolobium petraeum","Hymenolobium petraeum","Hymenolobium petraeum","Swietenia macrophylla","Swietenia macrophylla"],[33.6,42.6,52.1,80.3,90.8,49.4,70.5,100.5,60.7,27.1],[9.1,13.2,15.4,18.6,19.5,16.8,17.9,22.4,15.3,8.7],["Sim","Não","Sim","Não","Sim","Não","Sim","Não","Sim","Sim"],[2,1,3,1,2,1,2,3,1,3],["Protegida","Protegida","Protegida","Explorar","Explorar","Remanescente","Explorar","Remanescente","Protegida","Protegida"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Especie<\/th>\n      <th>DAP<\/th>\n      <th>H<\/th>\n      <th>Cipo<\/th>\n      <th>QF<\/th>\n      <th>Selecao<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":10,"dom":"tip","autoWidth":true,"initComplete":"function(settings, json) {\n$(this.api().table().container()).css({'font-size': '12pt'});\n}","columnDefs":[{"className":"dt-right","targets":[1,2,4]}],"order":[],"orderClasses":false}},"evals":["options.initComplete"],"jsHooks":[]}</script>
+<div id="htmlwidget-9b0ea0a61f5ab8be6de9" style="width:350px;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-9b0ea0a61f5ab8be6de9">{"x":{"filter":"none","caption":"<caption>Dados fictícios para 10 árvores de duas espécies florestais.<\/caption>","editable":{"target":"cell","disable":{"columns":null}},"data":[["Swietenia macrophylla","Swietenia macrophylla","Swietenia macrophylla","Hymenolobium petraeum","Hymenolobium petraeum","Hymenolobium petraeum","Hymenolobium petraeum","Hymenolobium petraeum","Swietenia macrophylla","Swietenia macrophylla"],[33.6,42.6,52.1,80.3,90.8,49.4,70.5,100.5,60.7,27.1],[9.1,13.2,15.4,18.6,19.5,16.8,17.9,22.4,15.3,8.7],["Sim","Não","Sim","Não","Sim","Não","Sim","Não","Sim","Sim"],[2,1,3,1,2,1,2,3,1,3],["Protegida","Protegida","Protegida","Explorar","Explorar","Remanescente","Explorar","Remanescente","Protegida","Protegida"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>Especie<\/th>\n      <th>DAP<\/th>\n      <th>H<\/th>\n      <th>Cipo<\/th>\n      <th>QF<\/th>\n      <th>Selecao<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":10,"dom":"tip","autoWidth":true,"initComplete":"function(settings, json) {\n$(this.api().table().container()).css({'font-size': '12pt'});\n}","columnDefs":[{"className":"dt-right","targets":[1,2,4]}],"order":[],"orderClasses":false}},"evals":["options.initComplete"],"jsHooks":[]}</script>
 
 ]
+
+---
+# Momento Spoiler 😁 🙊
+
+## Importação de dados no R
+
++ A tabela com dados fictícios servirá para praticar os operadores lógicos. 
+
++ No entanto, para que todos possam praticar é necessário construir a tabela ou simplesmente carregá-la, caso os dados estejam tabulados em alguma planilha. Mas, usaremos a segunda opção!
+
++ Para carregar dados no R existem diversas funções disponíveis. 
+
++ Estudaremos a função `read_csv()` do pacote &lt;bdi style="font-weight:bold; color:magenta;"&gt;readr&lt;/bdi&gt;.
+
++ Essa função é usada para importar dados em planilhas `.csv` (comma-separated values). 
+
+---
+# Momento Spoiler 😁 🙊
+
+## Importação de dados no R
+
+
+```r
+(data &lt;- read_csv("../Data/data1.csv"))
+## # A tibble: 10 x 6
+##    Especie                 DAP     H Cipo     QF Selecao     
+##    &lt;chr&gt;                 &lt;dbl&gt; &lt;dbl&gt; &lt;chr&gt; &lt;dbl&gt; &lt;chr&gt;       
+##  1 Swietenia macrophylla  33.6   9.1 Sim       2 Protegida   
+##  2 Swietenia macrophylla  42.6  13.2 Não       1 Protegida   
+##  3 Swietenia macrophylla  52.1  15.4 Sim       3 Protegida   
+##  4 Hymenolobium petraeum  80.3  18.6 Não       1 Explorar    
+##  5 Hymenolobium petraeum  90.8  19.5 Sim       2 Explorar    
+##  6 Hymenolobium petraeum  49.4  16.8 Não       1 Remanescente
+##  7 Hymenolobium petraeum  70.5  17.9 Sim       2 Explorar    
+##  8 Hymenolobium petraeum 100.   22.4 Não       3 Remanescente
+##  9 Swietenia macrophylla  60.7  15.3 Sim       1 Protegida   
+## 10 Swietenia macrophylla  27.1   8.7 Sim       3 Protegida
+```
 
 ---
 # Operadores lógicos
@@ -830,7 +868,7 @@ Use o operador lógico `&amp;` para responder as questões a seguir:
 
 
 ```r
-dt$DAP &gt;= 50 &amp; dt$QF == 1
+data$DAP &gt;= 50 &amp; data$QF == 1
 ```
 
 --
@@ -854,39 +892,144 @@ A [Resolução CONAMA nº 406 de 02/02/2009](http://www2.mma.gov.br/port/conama/
 
 ✍ Quais árvores possuem &lt;bdi style="font-weight:bold"&gt;cipós ausentes&lt;/bdi&gt;, &lt;bdi style="font-weight:bold"&gt;QF igual a 1&lt;/bdi&gt; `e` &lt;bdi style="font-weight:bold"&gt;DAP maior ou igual a 50cm&lt;/bdi&gt;❓
 
+--
+
 
 ```r
-dt$Cipo == "Não" &amp; dt$QF == 1 &amp; dt$DAP &gt;= 50
+data$Cipo == "Não" &amp; data$QF == 1 &amp; data$DAP &gt;= 50
 ```
+
+--
 
 
 ```
 ##  [1] FALSE FALSE FALSE  TRUE FALSE FALSE FALSE FALSE FALSE FALSE
 ```
 
-+ Quais árvores estão selecionadas para &lt;bdi style="font-weight:bold"&gt;explorar&lt;/bdi&gt; `e` possuem &lt;bdi style="font-weight:bold"&gt;QF igual a 1&lt;/bdi&gt;?
+--
+✍ Quais árvores estão selecionadas para &lt;bdi style="font-weight:bold"&gt;explorar&lt;/bdi&gt; `e` &lt;bdi style="font-weight:bold"&gt;QF igual a 1&lt;/bdi&gt;❓
 
+--
 
 ```r
-dt$Selecao == "Explorar" &amp; dt$QF == 1
+data$Selecao == "Explorar" &amp; data$QF == 1
 ```
 
+--
 
 ```
 ##  [1] FALSE FALSE FALSE  TRUE FALSE FALSE FALSE FALSE FALSE FALSE
 ```
 
-+ Quais árvores possuem &lt;bdi style="font-weight:bold"&gt;DAP maior do que 50cm&lt;/bdi&gt; `e` &lt;bdi style="font-weight:bold"&gt;podem ser exploradas&lt;/bdi&gt; (cortadas)?
+---
+# Operadores lógicos
 
+## Um quadro síntese
 
-```r
-DAP &gt;= 50 &amp; Cortar == "Sim"
-```
+.pull-left[
 
+## .center[Operador `&amp;`]
 
-```
-##  [1] FALSE FALSE FALSE  TRUE FALSE FALSE FALSE FALSE  TRUE FALSE
-```
+&lt;style type="text/css"&gt;
+.tg  {border-collapse:collapse;border-color:#bbb;border-spacing:0;}
+.tg td{background-color:#E0FFEB;border-color:#bbb;border-style:solid;border-width:1px;color:#594F4F;
+  font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{background-color:#9DE0AD;border-color:#bbb;border-style:solid;border-width:1px;color:#493F3F;
+  font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-75bc{background-color:#efefef;border-color:inherit;color:#32cb00;text-align:center;vertical-align:top}
+.tg .tg-5986{background-color:#ffffff;border-color:inherit;text-align:center;vertical-align:top}
+.tg .tg-v0hj{background-color:#efefef;border-color:inherit;font-weight:bold;text-align:center;vertical-align:top}
+.tg .tg-2y3c{background-color:#ffffff;border-color:inherit;color:#32cb00;text-align:center;vertical-align:top}
+.tg .tg-kv1i{background-color:#efefef;border-color:inherit;color:#fe0000;font-weight:bold;text-align:center;vertical-align:top}
+.tg .tg-l5hg{background-color:#ffffff;border-color:inherit;color:#fe0000;font-weight:bold;text-align:center;vertical-align:top}
+&lt;/style&gt;
+&lt;table class="tg"&gt;
+&lt;thead&gt;
+  &lt;tr&gt;
+    &lt;th class="tg-v0hj"&gt;Expressão 1&lt;/th&gt;
+    &lt;th class="tg-v0hj"&gt;Expressão 2&lt;/th&gt;
+    &lt;th class="tg-v0hj"&gt;Expressão 1 &amp;amp; Expressão 2&lt;/th&gt;
+  &lt;/tr&gt;
+&lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+    &lt;td class="tg-5986"&gt;&lt;span style="font-weight:bold;color:#32CB00"&gt;TRUE&lt;/span&gt;&lt;/td&gt;
+    &lt;td class="tg-2y3c"&gt;&lt;span style="font-weight:700;font-style:normal"&gt;TRUE&lt;/span&gt;&lt;/td&gt;
+    &lt;td class="tg-2y3c"&gt;&lt;span style="font-weight:700;font-style:normal"&gt;TRUE&lt;/span&gt;&lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+    &lt;td class="tg-75bc"&gt;&lt;span style="font-weight:700;font-style:normal"&gt;TRUE&lt;/span&gt;&lt;/td&gt;
+    &lt;td class="tg-kv1i"&gt;FALSE&lt;/td&gt;
+    &lt;td class="tg-kv1i"&gt;&lt;span style="font-weight:700;font-style:normal;color:#FE0000"&gt;FALSE&lt;/span&gt;&lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+    &lt;td class="tg-l5hg"&gt;FALSE&lt;/td&gt;
+    &lt;td class="tg-2y3c"&gt;&lt;span style="font-weight:700;font-style:normal"&gt;TRUE&lt;/span&gt;&lt;/td&gt;
+    &lt;td class="tg-l5hg"&gt;&lt;span style="font-weight:700;font-style:normal;color:#FE0000"&gt;FALSE&lt;/span&gt;&lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+    &lt;td class="tg-kv1i"&gt;FALSE&lt;/td&gt;
+    &lt;td class="tg-kv1i"&gt;FALSE&lt;/td&gt;
+    &lt;td class="tg-kv1i"&gt;FALSE&lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
+]
+
+.pull-right[
+## .center[Operador `|`]
+
+&lt;style type="text/css"&gt;
+.tg  {border-collapse:collapse;border-color:#bbb;border-spacing:0;}
+.tg td{background-color:#E0FFEB;border-color:#bbb;border-style:solid;border-width:1px;color:#594F4F;
+  font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{background-color:#9DE0AD;border-color:#bbb;border-style:solid;border-width:1px;color:#493F3F;
+  font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-75bc{background-color:#efefef;border-color:inherit;color:#32cb00;text-align:center;vertical-align:top}
+.tg .tg-5986{background-color:#ffffff;border-color:inherit;text-align:center;vertical-align:top}
+.tg .tg-v0hj{background-color:#efefef;border-color:inherit;font-weight:bold;text-align:center;vertical-align:top}
+.tg .tg-2y3c{background-color:#ffffff;border-color:inherit;color:#32cb00;text-align:center;vertical-align:top}
+.tg .tg-kv1i{background-color:#efefef;border-color:inherit;color:#fe0000;font-weight:bold;text-align:center;vertical-align:top}
+.tg .tg-l5hg{background-color:#ffffff;border-color:inherit;color:#fe0000;font-weight:bold;text-align:center;vertical-align:top}
+&lt;/style&gt;
+&lt;table class="tg"&gt;
+&lt;thead&gt;
+  &lt;tr&gt;
+    &lt;th class="tg-v0hj"&gt;Expressão 1&lt;/th&gt;
+    &lt;th class="tg-v0hj"&gt;Expressão 2&lt;/th&gt;
+    &lt;th class="tg-v0hj"&gt;Expressão 1 | Expressão 2&lt;/th&gt;
+  &lt;/tr&gt;
+&lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+    &lt;td class="tg-5986"&gt;&lt;span style="font-weight:bold;color:#32CB00"&gt;TRUE&lt;/span&gt;&lt;/td&gt;
+    &lt;td class="tg-2y3c"&gt;&lt;span style="font-weight:700;font-style:normal"&gt;TRUE&lt;/span&gt;&lt;/td&gt;
+    &lt;td class="tg-2y3c"&gt;&lt;span style="font-weight:700;font-style:normal"&gt;TRUE&lt;/span&gt;&lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+    &lt;td class="tg-75bc"&gt;&lt;span style="font-weight:700;font-style:normal"&gt;TRUE&lt;/span&gt;&lt;/td&gt;
+    &lt;td class="tg-kv1i"&gt;FALSE&lt;/td&gt;
+    &lt;td class="tg-kv1i"&gt;&lt;span style="font-weight:700;font-style:normal;color:#32CB00"&gt;TRUE&lt;/span&gt;&lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+    &lt;td class="tg-l5hg"&gt;FALSE&lt;/td&gt;
+    &lt;td class="tg-2y3c"&gt;&lt;span style="font-weight:700;font-style:normal"&gt;TRUE&lt;/span&gt;&lt;/td&gt;
+    &lt;td class="tg-l5hg"&gt;&lt;span style="font-weight:700;font-style:normal;color:#32CB00"&gt;TRUE&lt;/span&gt;&lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+    &lt;td class="tg-kv1i"&gt;FALSE&lt;/td&gt;
+    &lt;td class="tg-kv1i"&gt;FALSE&lt;/td&gt;
+    &lt;td class="tg-kv1i"&gt;FALSE&lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
+]
+&lt;br&gt;
+.bg-washed-near-white.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt5[
++ Operador `&amp;`: A resposta será `TRUE` apenas quando todas as operações forem `TRUE`, caso contrário será `FALSE`.
+
++ Operador `|`: A resposta será `TRUE` quando pelo menos uma operação for `TRUE`, caso contrário será `FALSE`.
+]
 
 ---
 # Operadores lógicos
